--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,12 @@ services:
     container_name: typeOrm-mysql
     environment:
       MYSQL_ROOT_PASSWORD: 963369
-      MYSQL_DATABASE: typeOrm-mysql 
+      MYSQL_DATABASE: typeOrm-mysql
     ports:
       - '3306:3306'
     restart: unless-stopped
+    volumes:
+      - mysql_data:/var/lib/mysql
+
+volumes:
+  mysql_data:
